# serde-ini

./: Cargo.toml
src/: de.rs  lib.rs  parse.rs  ser.rs  write.rs
tests/: enum_seq.rs  smoke.rs
