[package]
name = "serde_ini"
version = "0.2.0"
authors = ["arcnmx"]
edition = "2024"

description = "Windows INI file {de,}serialization"
keywords = ["ini", "cfg", "serde"]

documentation = "http://arcnmx.github.io/serde-ini/serde_ini"
repository = "https://github.com/arcnmx/serde-ini"
readme = "README.md"
license = "MIT"

[dependencies]
serde = "1"
result = "1"
void = "1"

[dev-dependencies]
serde_derive = "1"
